kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adu-ecommerce-app
  labels:
    app: adu-ecommerce-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: adu-ecommerce-app
  template:
    metadata:
      labels:
        app: adu-ecommerce-app
    spec:
      containers:
      - name: adu-ecommerce-app
        image: obidocker380/adu-ecommerce-app:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: adu-ecommerce-app
  labels:
    app: adu-ecommerce-app
spec:
  type: NodePort
  selector:
    app: adu-ecommerce-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
