kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: adu-ecommerce-app
  labels:
    app: adu-ecommerce-app
spec:
  type: NodePort
  selector:
    app: adu-ecommerce-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
